fixed horizontal scroll

--- a/styles/sass/_home.scss
+++ b/styles/sass/_home.scss
@@ -135,7 +135,13 @@
         position: relative;
     }
 
+    &__chairs{
+        max-width: 100%;
+    }
 
+    &__circle{
+        max-width: 100%;
+    }
 
     &__sticker {
         position: absolute;
